finalizado html css desktop y js

--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
         </section>
       </div>
       <div class="bloqueresultado">
-        <div class="superior">
+        <div class="fondo">
           <textarea id="salida" cols="30" rows="17" wrap="soft"></textarea>
           <img
             src="imagenes/muneco.svg"
             alt="muñeco buscando con una lupa"
             id="imagenmuneco"
           />
-          <p class="textonoencontrado" id="textonoencontrado">
-            Ningún mensaje fue encontrado
-          </p>
-          <p class="ingresetexto" id="ingresetexto">
+          <p id="textonoencontrado">Ningún mensaje fue encontrado</p>
+          <p id="ingresetexto">
             Ingrese el texto que desee encriptar o desencriptar.
           </p>
-        </div>
-        <div class="inferior">
-          <input type="button" id="copiar" value="Copiar" />
+          <div class="inferior">
+            <input type="button" id="copiar" value="Copiar" />
+          </div>
         </div>
       </div>
     </main>
