--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Encriptador Alura Reto</title>
   </head>
   <body>
     <main>
@@ -60,6 +60,11 @@
         </div>
       </div>
     </main>
+    <footer>
+      <p>Copyright 2022</p>
+      <p>Contacto: masanchezm86@gmail.com</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
