correciones en css responsive del footer

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       </div>
     </main>
     <footer>
-      <p>Copyright 2022</p>
       <p>Contacto: masanchezm86@gmail.com</p>
+      <p>#challengeonecodificador4</p>
     </footer>
 
     <script src="script.js"></script>
